--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.2.3
+Flask==2.3.2
+Werkzeug==2.2.3
 osmnx==1.3.0
 networkx==3.1
 geopandas==0.13.2
@@ -6,5 +7,4 @@ ortools==9.8.3296
 shapely==2.0.2
 geopy==2.3.0
 python-dotenv==1.0.0
-
 numpy==1.26.4
