--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,10 @@ Werkzeug==2.2.3
 osmnx==1.3.0
 networkx==3.1
 geopandas==0.13.2
-ortools==9.7.2996
-shapely==2.0.2
+ortools==9.4.1874
+shapely==1.8.5
 geopy==2.3.0
 python-dotenv==1.0.0
-numpy==1.26.4
-pandas==2.0.3
-protobuf==4.25.3
-pyproj==3.6.0
-requests==2.31.0
+numpy==1.24.4
+pandas==1.5.3
+cachetools==5.3.3
